geoportailv3/static/less/navbars.less
/** Top and bottom bars (header and footer) **/

@navbars-button-border-color: #8394a0;

header {
  &.navbar {
    border-width: 0;
    @media (max-width: @screen-xs-max) {
      min-height: 40px;
    }
  }
  .box-shadow(0px 2px 6px -1px rgba(0, 0, 0, 0.5));

  .container-fluid {
    padding-left: 0;
    padding-right: 0;
  }
}
.nav {
  > li {
    /* force items to appear on the same line even for small screens */
    display: inline-block;
  }
}

/***************/
/* positioning */
/***************/

.toolbox {
  float: none;
  // FIXME to be set to real width (may depend on media width)
  width: 300px;
  // center the toolbox bar
  margin: 0 auto;
  > li {
    /* force items to appear on the same line even for small screens */
    display: inline-block;
  }
}

.toolbox-panel {
  display: none;
  position: absolute;
  top: auto;
  bottom: 100%;
  white-space: nowrap;
}

.toolbox-panel-top {
  top: 100%;
  bottom: auto;
  right: 0px;

  li {
    display: block;
    float: right;
    > a {
      width: 62px !important;
      margin-left: 1px;
    }
  }
}

.lang .toolbox-panel-top {
  /* 4 languages */
  width: 4 * 63px;
}

.active .toolbox-panel {
  display: block;
}

.sidebar-controls {
  left: 0;
  .transition(left 300ms 0 ease-out);
  z-index: 4;
}

@media (max-width: @screen-xs-max) {
  .sidebar-controls,
  .toolbox {
    position: absolute;
    bottom: 20px;
  }
  .sidebar-controls,
  .toolbox {
    > li {
      display: block;
    }
  }
  .toolbox {
    width: auto;
    margin: 0;
    right: 0;
  }
  footer {
    .sidebar-controls.open {
      left: 100%;
    }
  }
}

/***********/
/* Sizing  */
/***********/

.navbar-nav > li > a {
  line-height: 18px;
}

.lang > ul.nav > li > a {
  line-height: 63px;
}

@media (max-width: @screen-xs-max) {
  .navbar-brand,
  .navbar-nav,
  .navbar-nav > li > a {
    line-height: 10px;
  }
  .navbar-brand {
    height: 40px;
  }
}

/***********/
/* styling */
/***********/

header {
  .navbar-form {
    padding: 0;
  }
  .navbar-nav > li > a {
    border-left: 1px solid @navbars-button-border-color;
    text-indent: -9999px;
  }
}

.toolbox > li:first-child > a {
  border-left: 1px solid @navbars-button-border-color;
}
.toolbox,
.sidebar-controls {
  li > a {
    border-right: 1px solid @navbars-button-border-color;
  }
}

.footer-navigation > li > a {
  color: #6b818f;
  text-transform: uppercase;
}

@media (min-width: @screen-sm-min) {
  footer {
    .box-shadow(0px 2px 6px 1px rgba(0, 0, 0, 0.5));
  }
}

@media (max-width: @screen-xs-max) {
  .sidebar-controls,
  .toolbox {
    > li {
      background-color: white;
      > a {
        border-right: 1px solid @navbars-button-border-color;
        border-bottom: 1px solid @navbars-button-border-color;
        width: 150px;
      }
    }
    > li:first-child > a {
      border-left: 0;
      border-top: 1px solid @navbars-button-border-color;
    }
  }
  .toolbox {
    > li > a {
      border: 1px solid @navbars-button-border-color;
      border-width: 1px 0 1px 1px;
    }
  }
}

